# QHomeAssistant

./: .gitignore  CMakeLists.txt  README.md
ExampleProject/: CMakeLists.txt  main.cpp  main.qml
include/: QHomeAssistantPlugin.h  homeassistantapi.h  homeassistantimageprovider.h  homeassistantimpl.h
qml/: AlarmCard.qml  Card.qml  ColoredImage.qml  EntitiesCard.qml  EntitiesView.qml  HomeAssistant.qml  QmlType.qml  Qt6ColorOverlay.qml  SensorsView.qml  WeatherForecast.qml  qhomeassistant.qrc  qml.qrc  qmldir
qml/controls/: ColoredImage.qml  EntitiesView.qml  LightIcon.qml  LightSlider.qml  OnOffSwitch.qml  SensorInfo.qml  SwitchControl.qml
qml/internal/: Qt5ColorOverlay.qml  Qt5DropShadow.qml  Qt6ColorOverlay.qml  Qt6DropShadow.qml
src/: QHomeAssistantPlugin.cpp  homeassistantapi.cpp  homeassistantimageprovider.cpp  homeassistantimpl.cpp
